# RayTracy

./: README.md
Res/: test.scn  world.scn
Source/: CMakeLists.txt
Source/Libs/: CMakeLists.txt
Source/Libs/libpng/: CMakeLists.txt
Source/Libs/zlib/: CMakeLists.txt
Source/RayTracy/: CMakeLists.txt  Geometry.cpp  Geometry.h  Matrix.cpp  Matrix.h  MeshLoader.cpp  MeshLoader.h  Renderer.cpp  Renderer.h  Scene.h  SceneLoader.cpp  SceneLoader.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h  Vector.cpp  Vector.h  main.cpp
